--- a/index.css
+++ b/index.css
@@ -12,6 +12,8 @@
 
         .img-round{
             border-radius: 50%;
+            -moz-border-radius: 50%; 
+            -webkit-border-radius: 50%;
         }
 
         .navbar .navbar-nav li a:hover{color: #aad9f7 !important;}
