CSS tweaks for improved responsiveness
Neatened up div nesting and amended text for mobile

--- a/index.css
+++ b/index.css
@@ -104,5 +104,9 @@
             margin-right: auto;
         }
         
+        .text-xs-center {
+            text-align: center;
+          } 
+        }
         
     }
