Responsive design tweaks
Headings fixed for mobile and small screens.

--- a/index.css
+++ b/index.css
@@ -107,6 +107,8 @@
         .text-xs-center {
             text-align: center;
           } 
-        }
         
+        .text-xs-justify {
+            text-align: justify;
+          } 
     }
